Fixed bold links on iOS. MDL sets to 500 but that's not what we want here.

--- a/source/demyo-web/src/main/webapp/css/demyo/demyo.common.less
+++ b/source/demyo-web/src/main/webapp/css/demyo/demyo.common.less
@@ -6,6 +6,7 @@
 a {
 	color: inherit;
 	text-decoration: none;
+	font-weight: normal;
 	&:hover {
 		text-decoration: underline;
 		color: @color-accent;
